--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -23,3 +23,9 @@ input, textarea {
 h1, h2 {
     margin-bottom: 20px;
 }
+
+hr {
+    width: 80%;
+    margin: 20px 0;
+    border: 1px solid #ccc;
+}
