--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -1,31 +1,31 @@
-.start-container, .signup-container, .login-container, .main-container, .previous-diaries-container, .settings-container, .write-diary-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    background-color: #f5f5f5;
-}
+/*.start-container, .signup-container, .login-container, .main-container, .previous-diaries-container, .settings-container, .write-diary-container {*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    align-items: center;*/
+/*    justify-content: center;*/
+/*    height: 100vh;*/
+/*    background-color: #f5f5f5;*/
+/*}*/
 
-button {
-    margin: 10px;
-    padding: 10px 20px;
-    font-size: 16px;
-}
+/*button {*/
+/*    margin: 10px;*/
+/*    padding: 10px 20px;*/
+/*    font-size: 16px;*/
+/*}*/
 
-input, textarea {
-    margin: 10px;
-    padding: 10px;
-    font-size: 16px;
-    width: 300px;
-}
+/*input, textarea {*/
+/*    margin: 10px;*/
+/*    padding: 10px;*/
+/*    font-size: 16px;*/
+/*    width: 300px;*/
+/*}*/
 
-h1, h2 {
-    margin-bottom: 20px;
-}
+/*h1, h2 {*/
+/*    margin-bottom: 20px;*/
+/*}*/
 
-hr {
-    width: 80%;
-    margin: 20px 0;
-    border: 1px solid #ccc;
-}
+/*hr {*/
+/*    width: 80%;*/
+/*    margin: 20px 0;*/
+/*    border: 1px solid #ccc;*/
+/*}*/
