--- a/front/src/components/start/StartPage.css
+++ b/front/src/components/start/StartPage.css
@@ -1,4 +1,3 @@
-/* 전체 화면을 기준으로 중앙 정렬 */
 .startpage-container {
     display: flex;
     justify-content: center;
@@ -60,6 +59,10 @@
 
 .login-option .text {
     font-size: 20px;
+}
+
+.login-option.kakao {
+    border: 1px solid #1a2c5c; /* 보더라인이 한번만 적용되도록 수정 */
 }
 
 /* 모바일 화면에서 제목과 버튼의 크기 조정 */
