--- a/front/src/components/diary/DiaryPage.css
+++ b/front/src/components/diary/DiaryPage.css
@@ -13,7 +13,9 @@
     width: 100%;
     background-color: #1a2c5c;
     color: white;
-    text-align: center;
+    display: flex;
+    justify-content: center; /* Flexbox를 사용하여 중앙 정렬 */
+    align-items: center; /* 수직 중앙 정렬 */
     font-size: 24px;
     font-weight: bold;
     padding: 15px;
@@ -21,6 +23,31 @@
     top: 0;
     left: 0;
     z-index: 1;
+}
+
+.diary-header-content {
+    display: flex;
+    justify-content: space-between; /* 좌우로 요소를 배치 */
+    align-items: center; /* 수직 중앙 정렬 */
+    width: 100%;
+    max-width: 360px;
+}
+
+.diary-back-button {
+    background-color: #1a2c5c;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+    outline: none; /* 버튼의 테두리 선을 없앰 */
+    margin-right: 10px;
+}
+
+.diary-back-button:hover {
+    background-color: #163a73; /* 호버 시 색상 변경 */
 }
 
 .diary-content {
@@ -176,6 +203,10 @@
         padding: 10px;
     }
 
+    .diary-header-content {
+        flex-direction: column;
+    }
+
     .diary-date {
         font-size: 18px;
     }
@@ -193,12 +224,21 @@
         font-size: 14px;
         padding: 8px 16px;
     }
+
+    .diary-back-button {
+        font-size: 14px;
+        padding: 8px 16px;
+    }
 }
 
 @media (max-width: 480px) {
     .diary-header {
         font-size: 18px;
         padding: 8px;
+    }
+
+    .diary-header-content {
+        flex-direction: column;
     }
 
     .diary-date {
@@ -215,6 +255,11 @@
     }
 
     .diary-save-button, .diary-submit-button, .diary-upload-button {
+        font-size: 12px;
+        padding: 6px 12px;
+    }
+
+    .diary-back-button {
         font-size: 12px;
         padding: 6px 12px;
     }
