[Eunchae] Fetch: Back-Space

--- a/front/src/components/main/MoreMenu.css
+++ b/front/src/components/main/MoreMenu.css
@@ -132,7 +132,7 @@
     border-radius: 12px;
     position: relative;
     transition: background-color 0.3s;
-    margin-left: 54%; /* 스위치와 텍스트 사이의 간격 */
+    margin-left: 10px; /* 스위치와 텍스트 사이의 간격 */
 }
 
 /* 스위치 안쪽 원 */
