[유지오] 수정

--- a/front/pwa-react/src/components/main/MoreMenu.css
+++ b/front/pwa-react/src/components/main/MoreMenu.css
@@ -46,6 +46,7 @@
     padding: 10px;
     background-color: #1a2c5c;
     color: #f3f6ff;
+    width: 100%;
     font-size: 16px;
     font-weight: bold;
     border-radius: 3px;
@@ -179,3 +180,4 @@
     font-size: 16px;
     color: #1a2c5c;
 }
+
