--- a/front/pwa-react/src/components/start/StartPage.css
+++ b/front/pwa-react/src/components/start/StartPage.css
@@ -9,9 +9,9 @@
 }
 
 .startpage-content {
-    width: 100%;
+    width: 62%;
     max-width: 393px;
-    height: auto;
+    height: 30%;
     background-color: #fff;
     border-radius: 50px;
     padding: 20px;
